# VPN-Detector

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  tracked_apps.json
.github/workflows/: build.yml  security-guard.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: anti_vpn_apps.json
app/src/main/cpp/: ifconfigdetector.cpp
app/src/main/java/com/cherepavel/vpndetector/: MainActivity.kt
app/src/main/java/com/cherepavel/vpndetector/detector/: DetectionEngine.kt  DetectionScorer.kt  IfconfigTermuxLikeDetector.kt  ProxyDetector.kt  TrackedAppsDetector.kt  TunnelNameMatcher.kt  VpnDetector.kt
app/src/main/java/com/cherepavel/vpndetector/model/: DetectionModels.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  vpn_detector.xml
app/src/main/res/layout/: activity_main.xml  common_item_detail_section.xml  common_item_signal_card.xml  common_item_signal_card_full.xml  main_block_transport_vpn.xml  main_section_actions.xml  main_section_apps.xml  main_section_extra.xml  main_section_footer.xml  main_section_header.xml  main_section_java.xml  main_section_native.xml  main_section_official_api.xml  main_section_overall_status.xml
app/src/main/res/values/: strings.xml
detector/: build.gradle.kts
detector/src/main/cpp/: CMakeLists.txt  ifconfigdetector.cpp  run_clang_format.sh
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt
metadata/: com.cherepavel.vpndetector.yml
(+35 files in other folders)
